crew certificate modal added

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,5 +15,7 @@
     "total_income": "Total income",
     "certificates": "Certificates",
     "actions": "Actions",
-    "view_certificates": "View certificates"
+    "view_certificates": "View certificates",
+    "issue_date": "Issue date",
+    "expiry_date": "Expiry date"
 }
