certificates page added with crud business

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -17,5 +17,6 @@
     "actions": "Actions",
     "view_certificates": "Voir les certificats",
     "issue_date": "Date de délivrance",
-    "expiry_date": "Date d'expiration"
+    "expiry_date": "Date d'expiration",
+    "crew_list": "Liste d'équipage"
 }
