--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,5 +17,6 @@
     "actions": "Actions",
     "view_certificates": "View certificates",
     "issue_date": "Issue date",
-    "expiry_date": "Expiry date"
+    "expiry_date": "Expiry date",
+    "crew_list": "Crew List"
 }
