--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -17,5 +17,6 @@
     "actions": "Ações",
     "view_certificates": "Ver certificados",
     "issue_date": "Data de emissão",
-    "expiry_date": "Data de validade"
+    "expiry_date": "Data de validade",
+    "crew_list": "Lista de tripulação"
 }
