crew card page added

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,5 +18,6 @@
     "view_certificates": "View certificates",
     "issue_date": "Issue date",
     "expiry_date": "Expiry date",
-    "crew_list": "Crew List"
+    "crew_list": "Crew List",
+    "crew_info": "Crew Info"
 }
