--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,5 +18,6 @@
     "view_certificates": "Voir les certificats",
     "issue_date": "Date de délivrance",
     "expiry_date": "Date d'expiration",
-    "crew_list": "Liste d'équipage"
+    "crew_list": "Liste d'équipage",
+    "crew_info": "Informations sur l'équipage"
 }
