--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -18,5 +18,6 @@
     "view_certificates": "Ver certificados",
     "issue_date": "Data de emissão",
     "expiry_date": "Data de validade",
-    "crew_list": "Lista de tripulação"
+    "crew_list": "Lista de tripulação",
+    "crew_info": "Informações da tripulação"
 }
