discount column added in crew list

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,5 +19,6 @@
     "issue_date": "Issue date",
     "expiry_date": "Expiry date",
     "crew_list": "Crew List",
-    "crew_info": "Crew Info"
+    "crew_info": "Crew Info",
+    "discount": "Discount"
 }
