--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -19,5 +19,6 @@
     "issue_date": "Data de emissão",
     "expiry_date": "Data de validade",
     "crew_list": "Lista de tripulação",
-    "crew_info": "Informações da tripulação"
+    "crew_info": "Informações da tripulação",
+    "discount": "Desconto"
 }
