translate added in new components and design changes

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -20,5 +20,35 @@
     "expiry_date": "Date d'expiration",
     "crew_list": "Liste d'équipage",
     "crew_info": "Informations sur l'équipage",
-    "discount": "Remise"
+    "discount": "Remise",
+    "add_crew": "Ajouter un équipage",
+    "close": "Fermer",
+    "confirm_delete": "Confirmer la suppression",
+    "confirm_delete_message": "Êtes-vous sûr de vouloir supprimer cet élément?",
+    "no": "Non",
+    "yes": "Oui",
+    "first_name_required": "Le prénom est requis",
+    "last_name_required": "Le nom de famille est requis",
+    "nationality_required": "La nationalité est requise",
+    "title_required": "Le titre est requis",
+    "days_on_board_required": "Les jours à bord sont requis",
+    "days_on_board_min": "Les jours à bord ne peuvent pas être inférieurs à 0",
+    "daily_rate_required": "Le taux journalier est requis",
+    "daily_rate_min": "Le taux journalier ne peut pas être inférieur à 0",
+    "currency_required": "La devise est requise",
+    "add_or_edit_certificate": "Ajouter ou modifier un certificat",
+    "certificate": "Certificat",
+    "certificate_required": "Le certificat est requis",
+    "issue_date_required": "La date de délivrance est requise",
+    "expiry_date_required": "La date d'expiration est requise",
+    "update_certificate": "Mettre à jour le certificat",
+    "add_certificate": "Ajouter un certificat",
+    "cancel": "Annuler",
+    "save": "Sauvegarder",
+    "name": "Nom",
+    "description": "Description",
+    "add_new_certificate": "Ajouter un nouveau certificat",
+    "name_required": "Nom Requis",
+    "description_required": "Description Requis",
+    "add": "Ajouter"
 }
