--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -20,5 +20,35 @@
     "expiry_date": "Data de validade",
     "crew_list": "Lista de tripulação",
     "crew_info": "Informações da tripulação",
-    "discount": "Desconto"
+    "discount": "Desconto",
+    "add_crew": "Adicionar tripulação",
+    "close": "Fechar",
+    "confirm_delete": "Confirmar exclusão",
+    "confirm_delete_message": "Tem certeza de que deseja excluir este item?",
+    "no": "Não",
+    "yes": "Sim",
+    "first_name_required": "Nome é obrigatório",
+    "last_name_required": "Sobrenome é obrigatório",
+    "nationality_required": "Nacionalidade é obrigatória",
+    "title_required": "Título é obrigatório",
+    "days_on_board_required": "Dias a bordo são obrigatórios",
+    "days_on_board_min": "Dias a bordo não podem ser inferiores a 0",
+    "daily_rate_required": "Taxa diária é obrigatória",
+    "daily_rate_min": "Taxa diária não pode ser inferior a 0",
+    "currency_required": "Moeda é obrigatória",
+    "add_or_edit_certificate": "Adicionar ou editar certificado",
+    "certificate": "Certificado",
+    "certificate_required": "Certificado é obrigatório",
+    "issue_date_required": "Data de emissão é obrigatória",
+    "expiry_date_required": "Data de validade é obrigatória",
+    "update_certificate": "Atualizar certificado",
+    "add_certificate": "Adicionar certificado",
+    "cancel": "Cancelar",
+    "save": "Salvar",
+    "name": "Nome",
+    "description": "Descrição",
+    "add_new_certificate": "Adicionar novo certificado",
+    "name_required": "Nome Requis",
+    "description_required": "Descrição Requis",
+    "add": "Adicionar"
 }
