--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,5 +20,35 @@
     "expiry_date": "Expiry date",
     "crew_list": "Crew List",
     "crew_info": "Crew Info",
-    "discount": "Discount"
+    "discount": "Discount",
+    "add_crew": "Add Crew",
+    "close": "Close",
+    "confirm_delete": "Confirm Delete",
+    "confirm_delete_message": "Are you sure you want to delete this item?",
+    "no": "No",
+    "yes": "Yes",
+    "first_name_required": "First Name is required",
+    "last_name_required": "Last Name is required",
+    "nationality_required": "Nationality is required",
+    "title_required": "Title is required",
+    "days_on_board_required": "Days On Board is required",
+    "days_on_board_min": "Days On Board cannot be less than 0",
+    "daily_rate_required": "Daily Rate is required",
+    "daily_rate_min": "Daily Rate cannot be less than 0",
+    "currency_required": "Currency is required",
+    "add_or_edit_certificate": "Add or Edit Certificate",
+    "certificate": "Certificate",
+    "certificate_required": "Certificate is required",
+    "issue_date_required": "Issue Date is required",
+    "expiry_date_required": "Expiry Date is required",
+    "update_certificate": "Update Certificate",
+    "add_certificate": "Add Certificate",
+    "cancel": "Cancel",
+    "save": "Save",
+    "name": "Name",
+    "description": "Description",
+    "add_new_certificate": "Add New Certificate",
+    "name_required": "Name is required",
+    "description_required": "Description is required",
+    "add": "Add"
 }
