--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -50,5 +50,6 @@
     "add_new_certificate": "Adicionar novo certificado",
     "name_required": "Nome Requis",
     "description_required": "Descrição Requis",
-    "add": "Adicionar"
+    "add": "Adicionar",
+    "crew_details": "Detalhes da tripulação"
 }
